# imagefeatures

./: README.md  pyproject.toml
examples/: demo.ipynb  demo_classification.ipynb  demo_similarity.ipynb
imagefeatures/: __init__.py  base.py  cli.py  extractor.py
imagefeatures/features/: __init__.py  auto_color_correlogram.py  cedd.py  centrist.py  color_histogram.py  color_layout.py  color_moments.py  dominant_colors.py  edge_histogram.py  fcth.py  fuzzy_color_histogram.py  gabor.py  haralick.py  hog.py  hu_moments.py  jcd.py  lbp.py  luminance_layout.py  opponent_histogram.py  phog.py  rotation_invariant_lbp.py  scalable_color.py  tamura.py
imagefeatures/utils/: __init__.py  color.py  metrics.py
